# AIPrivacyLicenseDetect

./: .gitignore  AiPrivacyLicense-1 (2).0  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Detailed_Project_info.md  GETTING_STARTED.md  LICENSE  NOTICE.MD  PUBLISHING.md  QUICKSTART.md  README.md  README_TESTING.md  SECURITY.md  TESTING_WEBSITES.md  example_usage.py  interactive_test.py  push_to_github.sh  pyproject.toml  requirements.txt  run_website_tests.bat  run_website_tests.sh  sample_urls.txt  setup.bat  setup.py  setup.sh  test.sh  test_detector_demo.py  test_multiple_websites.py  test_website.py
ai_privacy_license_detector/: __init__.py  cli.py  detector.py  py.typed
chat_interface/: README.md  index.html  server.py
docs/: README.md  __init__.py
examples/: README.md  STRUCTURE.md  __init__.py  example_check.py
examples/testing/: AiPrivacyLicense-1.0.txt  README.md  TESTING.md  debug_test.sh  minimal_test.sh  quick_test.sh  reliable_test_runner.sh  robots.txt  run_tests.sh  run_tests_final.sh  run_tests_fixed.sh  run_tests_macos.sh  simple_run_tests.sh  simple_test.py  simple_test_fixed.py  test_commands.md  test_local_detection.py  test_page.html  working_test_runner.sh
tests/: __init__.py  test_headers.py  test_jsonld.py  test_parse.py  test_sanitize.py
