[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-privacy-license-detector"
version = "1.0.0"
description = "Detect and respect AI Privacy Licenses when crawling or processing data"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Nabanita De", email = "nabanita@privacylicense.com"}
]
maintainers = [
    {name = "Privacy License", email = "nabanita@privacylicense.com"}
]
keywords = ["ai", "privacy", "license", "detection", "robots", "compliance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
            "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: XML",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/nabanitade/aiprivacylicenseSDK"
Documentation = "https://github.com/nabanitade/aiprivacylicenseSDK#readme"
Repository = "https://github.com/nabanitade/aiprivacylicenseSDK"
Issues = "https://github.com/nabanitade/aiprivacylicenseSDK/issues"
Changelog = "https://github.com/nabanitade/aiprivacylicenseSDK/blob/main/CHANGELOG.md"

[project.scripts]
ai-license = "ai_privacy_license_detector.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_privacy_license_detector*"]

[tool.setuptools.package-data]
ai_privacy_license_detector = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = ["__pycache__", ".git", ".venv", "venv", "build", "dist"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
